# knife-framework

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: knife-framework.yml
docs/: _config.yml  changelog.md  goal.md  index.md  lectotype.md  macro.md  util.md
examples/: server.rs
src/: lib.rs
src/app/: application.rs  config.rs  db.rs  default.rs  logger.rs  setting.rs
src/bean/: component.rs  main.rs  scope.rs
src/boot/: bootstrap.rs  main.rs
src/command/: command.rs  mod.rs
src/db/: db.rs  main.rs  sql.rs
src/ext/: error.rs  page.rs
src/macros/: value.rs
src/model/: common.rs
src/web/: model.rs  request.rs  response.rs  server.rs
