[package]
name = "knife-framework"
version = "0.1.4"
authors = ["ocaso <ocaso1987@qq.com>"]
description = "Knife微服务框架"
repository = "https://github.com/ocaso1987/knife-macro/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
knife-macro = "0.1.4"
knife-util = "0.1.4"
serde = "1.0.144"
tracing = "0.1.36"

[features]
default = []
